--- a/static/breadcrumb.less
+++ b/static/breadcrumb.less
@@ -42,6 +42,7 @@
 				background-repeat: no-repeat;
 			}
 		}
+
 		li {
 			display: inline-block;
 			list-style: none;
@@ -63,6 +64,11 @@
 			.on-this-page a {
 				padding: @gutter/4 0;
 			}
+		}
+
+		li.breadcrumb-on-this-page {
+			background: @link-color;
+			padding-right: @gutter;
 		}
 
 		.breadcrumb-dropdown-separator {
